# one-billion-row-challenge-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
src/: create_measurements.py  using_dask.py  using_duckdb.py  using_pandas.py  using_polars.py  using_python.py
